Fixing style for close and update button for data filter as well as intiate full screen with close and filter and styles for lengend sets

--- a/src/modules/layout/layout.component.html
+++ b/src/modules/layout/layout.component.html
@@ -76,8 +76,8 @@
   </table>
   <div class="layout-footer">
     <div>
-      <button class="btn btn-outline-secondary btn-sm" (click)="updateLayout()"><i class="fa fa-refresh"></i>Update</button>
-      <button class="btn btn-outline-secondary btn-sm" (click)="close()"><i class="fa fa-times"></i>Close</button>
+      <button class="dashboard-border dashboard-btn" (click)="updateLayout()"><i class="fa fa-refresh"></i>Update</button>
+      <button class="dashboard-border dashboard-btn" (click)="close()"><i class="fa fa-times"></i>Close</button>
     </div>
   </div>
 </div>
