--- a/src/modules/map/components/map-container/map-container.component.scss
+++ b/src/modules/map/components/map-container/map-container.component.scss
@@ -69,4 +69,9 @@ app-map-container {
         z-index: 490 !important;
         left: 0;
     }
+  .warning-map {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
