--- a/src/modules/data-filter/data-filter.component.html
+++ b/src/modules/data-filter/data-filter.component.html
@@ -1,7 +1,7 @@
 <div class="data-filter-container">
   <div class="data-filter-options">
     <ul class="data-filter-options-icon">
-      <li *ngFor="let option of dataFilterOptions">
+      <li *ngFor="let option of dataFilterOptions" >
         <a (click)="toggleDataFilterOption(option, $event)"
            [ngClass]="{
             'btn': true,
@@ -11,7 +11,7 @@
            }"
            title="Click to see {{option.name}}"
         >
-          {{option.name}}
+          <span padding-top>{{option.name}}</span>
         </a>
       </li>
     </ul>
@@ -27,7 +27,7 @@
       (click)="toggleDataFilterGroupList($event)"
     >
       <span>{{ selectedGroup?.name || 'Select'}}</span>
-      <span><img src="assets/icons/arrow-down.png" alt=""></span>
+      <span><img src="assets/icon/arrow-down.png" alt=""></span>
     </button>
 
     <!--Group selection list-->
@@ -111,7 +111,7 @@
 
 <div class="data-filter-btns">
   <div>
-    <button class="btn btn-outline-secondary btn-sm" (click)="emit($event)">Update</button>
-    <button class="btn btn-outline-secondary btn-sm" (click)="close($event)">Close</button>
+    <button class="dashboard-border dashboard-btn" (click)="emit($event)">Update</button>
+    <button class="dashboard-border dashboard-btn" (click)="close($event)">Close</button>
   </div>
 </div>
