--- a/src/modules/map/components/map-container/map-container.component.html
+++ b/src/modules/map/components/map-container/map-container.component.html
@@ -1,4 +1,4 @@
-<div class="map-container">
+<div class="map-container" [hidden]="!mapHasGeofeatures">
   <div class="map-block__left">
     <ul class="map-controls__list">
       <li>
@@ -22,10 +22,16 @@
         <img src="assets/icon/layers.png">
       </button>
       <div class="visualization-legend__container" *ngIf="visualizationLegendIsOpen$ | async" [ngStyle]="{'max-height': 'calc(' + mapHeight + ' - 150px)'}"
-        (mouseleave)="toggleLegendContainerView()">
+           (mouseleave)="toggleLegendContainerView()">
         <app-visualization-legend [mapVisualizationObject]="visualizationObject"></app-visualization-legend>
       </div>
     </div>
   </div>
   <div id="map-view-port-{{visualizationObject.componentId}}" style="width:100%; height: 100%;"></div>
+</div>
+<div class="warning-map" *ngIf="!mapHasGeofeatures" [ngStyle]="{'height': displayConfigurations.itemHeight}">
+  <h6>Sorry, this map has no associated geofeatures</h6>
+</div>
+<div class="warning-map" *ngIf="!mapHasGeofeatures" [ngStyle]="{'height': displayConfigurations.itemHeight}">
+  <h6>Sorry, this map has no associated geofeatures</h6>
 </div>
