--- a/src/modules/period-filter/period-filter.component.html
+++ b/src/modules/period-filter/period-filter.component.html
@@ -17,8 +17,8 @@
     </div>
     <div class="period-year-section">
       <div class="btn-group btn-group-sm">
-        <button type="button" class="btn btn-outline-secondary" (click)="pushPeriodBackward($event)">Prev Year</button>
-        <button type="button" class="btn btn-outline-secondary" (click)="pushPeriodForward($event)" [disabled]="selectedYear === currentYear">Next Year</button>
+        <button type="button" class="dashboard-border dashboard-btn" (click)="pushPeriodBackward($event)">Prev Year</button>
+        <button type="button" class="dashboard-border dashboard-btn" (click)="pushPeriodForward($event)" [disabled]="selectedYear === currentYear">Next Year</button>
       </div>
     </div>
   </div>
@@ -67,8 +67,8 @@
   <!--period footer-->
   <div class="period-filter-btns">
     <div>
-      <button class="btn btn-sm btn-outline-secondary" (click)="updatePeriod($event)">Update</button>
-      <button class="btn btn-sm btn-outline-secondary" (click)="closePeriodFilter($event)">Close</button>
+      <button class="dashboard-border dashboard-btn" (click)="updatePeriod($event)">Update</button>
+      <button class="dashboard-border dashboard-btn" (click)="closePeriodFilter($event)">Close</button>
     </div>
   </div>
   <!--end of period footer-->
