--- a/src/components/empty-list-notification/empty-list-notification.html
+++ b/src/components/empty-list-notification/empty-list-notification.html
@@ -1,11 +1,11 @@
-<ion-grid >
-  <ion-row >
-    <ion-col  >
+<ion-grid>
+  <ion-row>
+    <ion-col>
       <div class="empty-list">
         <div class="image-container">
-          <img [src]="imageUrl" >
+          <img [src]="imageUrl">
         </div>
-        <p >{{ emptyListMessage }}</p>
+        <p [translate]="emptyListMessage"></p>
       </div>
     </ion-col>
   </ion-row>
