--- a/src/components/notification/notification.html
+++ b/src/components/notification/notification.html
@@ -1,11 +1,11 @@
 <ion-grid>
   <ion-row>
-    <ion-col >
+    <ion-col>
       <div class="empty-list">
         <div class="image-container">
-          <img [src]="icon" >
+          <img [src]="icon">
         </div>
-        <p >{{ message }}</p>
+        <p [translate]="message"></p>
       </div>
 
     </ion-col>
