--- a/src/components/data-set-report-row/data-set-report-row.html
+++ b/src/components/data-set-report-row/data-set-report-row.html
@@ -1,22 +1,21 @@
-
-<table class="table table-bordered" width="100%" >
+<table class="table table-bordered" width="100%">
   <thead>
-  <tr>
-    <th [attr.colspan]="dataElement.categoryCombo.categoryOptionCombos.length" (click)="showTooltips(dataElement,'')">
-      {{fieldLabelKey}}
-    </th>
-  </tr>
-  <tr *ngIf="dataElement.categoryCombo.name !='default'" >
-    <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos" class="inputLabel" >
-      {{  categoryOptionCombo.name }}
-    </th>
-  </tr>
+    <tr>
+      <th [attr.colspan]="dataElement.categoryCombo.categoryOptionCombos.length">
+        {{fieldLabelKey}}
+      </th>
+    </tr>
+    <tr *ngIf="dataElement.categoryCombo.name !='default'">
+      <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos" class="inputLabel">
+        {{ categoryOptionCombo.name }}
+      </th>
+    </tr>
   </thead>
   <tbody>
-  <tr>
-    <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos" >
-      {{ dataObject[dataElement.id + "-" + categoryOptionCombo.id] }}
-    </th>
-  </tr>
+    <tr>
+      <th *ngFor="let categoryOptionCombo of dataElement.categoryCombo.categoryOptionCombos">
+        {{ dataObject[dataElement.id + "-" + categoryOptionCombo.id] }}
+      </th>
+    </tr>
   </tbody>
 </table>
