--- a/src/components/data-set-report/data-set-report.html
+++ b/src/components/data-set-report/data-set-report.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div *ngIf="entryFormSections && entryFormSections.length == 0">
-        <empty-list-notification [emptyListMessage]="'Missing entry form sections, please contact administarator'"></empty-list-notification>
+        <empty-list-notification [emptyListMessage]="translationMapper['Missing entry form sections, please contact administarator']"></empty-list-notification>
       </div>
 
     </div>
