--- a/src/components/organisation-unit-tree/organisation-unit-tree.html
+++ b/src/components/organisation-unit-tree/organisation-unit-tree.html
@@ -1,9 +1,11 @@
 <ion-item>
-  <ion-icon name="ios-add-circle-outline" (tap)="toggleOrganisationUnit(organisationUnit)" *ngIf="(organisationUnit && organisationUnit.children && organisationUnit.children.length>0) && !hasOrgUnitChildrenOpened[organisationUnit.id]" item-left></ion-icon>
-  <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrganisationUnit(organisationUnit)" *ngIf="(organisationUnit && organisationUnit.children && organisationUnit.children.length>0) && hasOrgUnitChildrenOpened[organisationUnit.id]" item-left></ion-icon>
+  <ion-icon name="ios-add-circle-outline" (tap)="toggleOrganisationUnit(organisationUnit)" *ngIf="(organisationUnit && organisationUnit.children && organisationUnit.children.length>0) && !hasOrgUnitChildrenOpened[organisationUnit.id]"
+    item-left></ion-icon>
+  <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrganisationUnit(organisationUnit)" *ngIf="(organisationUnit && organisationUnit.children && organisationUnit.children.length>0) && hasOrgUnitChildrenOpened[organisationUnit.id]"
+    item-left></ion-icon>
 
   <div (tap)="setSelectedOrganisationUnit(organisationUnit)">
-    <span ion-text  [color]="(currentSelectedOrgUnitName == organisationUnit.name) ?'current' : 'font-color'"  >{{ organisationUnit.name }}</span>
+    <span ion-text [color]="(currentSelectedOrgUnitName == organisationUnit.name) ?'current' : 'font-color'">{{ organisationUnit.name }}</span>
   </div>
 
 </ion-item>
@@ -14,25 +16,22 @@
       <div style="text-align: center" item-left>
         <loading loadingSize="small"></loading>
       </div>
-      <span >
-        Loading organisation units
+      <span>
+        {{ translationMapper['Discovering organisation units']}}
       </span>
     </ion-item>
   </div>
 
   <div *ngIf="hasErrorOccurred">
     <ion-item>
-      Fail to load children for {{ organisationUnit.name }}
+      {{ translationMapper['Fail to discover organisation unit children']}}
     </ion-item>
   </div>
 
   <div *ngIf="isOrganisationUnitsFetched && hasOrgUnitChildrenLoaded && !hasErrorOccurred">
     <div *ngFor="let child of organisationUnit.children">
-      <organisation-unit-tree [organisationUnit]="child"
-                              [currentSelectedOrgUnitName]="currentSelectedOrgUnitName"
-                              [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened"
-                              (selectedOrganisationUnit)="setSelectedOrganisationUnit($event)"
-                              [currentUser]="currentUser"></organisation-unit-tree>
+      <organisation-unit-tree [organisationUnit]="child" [currentSelectedOrgUnitName]="currentSelectedOrgUnitName" [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened"
+        (selectedOrganisationUnit)="setSelectedOrganisationUnit($event)" [currentUser]="currentUser"></organisation-unit-tree>
 
     </div>
   </div>
