--- a/src/components/download-meta-data/download-meta-data.html
+++ b/src/components/download-meta-data/download-meta-data.html
@@ -3,17 +3,15 @@
 <ion-grid>
   <ion-row *ngIf="!showLoadingMessage">
     <ion-col>
-    <button ion-button block style="text-transform: none;"
-            (tap)="autoSelect('selectAll')" > Select All</button>
+      <button ion-button block style="text-transform: none;" (tap)="autoSelect('selectAll')">{{ translationMapper['Select all'] }}</button>
     </ion-col>
     <ion-col>
-    <button ion-button block style="text-transform: none;"
-            (tap)="autoSelect('unSelectAll')" >Deselect All </button>
+      <button ion-button block style="text-transform: none;" (tap)="autoSelect('unSelectAll')"> {{ translationMapper['Deselect all'] }} </button>
     </ion-col>
   </ion-row>
-  <ion-row *ngIf="!showLoadingMessage" >
-    <ion-col >
-      <div *ngFor="let resourceObject of resources"  >
+  <ion-row *ngIf="!showLoadingMessage">
+    <ion-col>
+      <div *ngFor="let resourceObject of resources">
         <ion-item>
           <ion-checkbox color="blue" [(ngModel)]="resourceObject.status"></ion-checkbox>
           <ion-label> {{ resourceObject.displayName }} </ion-label>
@@ -22,11 +20,11 @@
     </ion-col>
   </ion-row>
 
-  <span *ngIf="showLoadingMessage" > <loading loadingSize="large" [loadingMessage]="updateMetaDataLoadingMessages"></loading> </span>
+  <span *ngIf="showLoadingMessage">
+    <loading loadingSize="large" [loadingMessage]="loadingMessage"></loading>
+  </span>
 
   <ion-row *ngIf="!showLoadingMessage">
-  <button ion-button style="text-transform: none;"
-          (tap)="checkingForResourceUpdate()"  block >Download MetaData</button>
+    <button ion-button style="text-transform: none;" (tap)="checkingForResourceUpdate()" block> {{ translationMapper['Download metadata'] }}</button>
   </ion-row>
 </ion-grid>
-
